# test_task_InlyIT

./: .env-non-dev  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 2024_03_18_1944-3d4573baae6b_create_table_user.py  2024_03_18_2029-8a93b3d60a04_create_table_announcement.py  2024_03_18_2100-a8c4baf79820_create_table_comment.py  2024_03_19_1451-8e734bd36869_create_table_user.py  2024_03_19_1452-5a461d0b61c4_create_table_comment.py  2024_03_19_1452-8b14dbb0cf19_create_table_announcement.py
api_v1/: __init__.py
api_v1/admin_api/: crud.py  dependencies.py  views.py
api_v1/announcement/: crud.py  dependencies.py  schemas.py  views.py
api_v1/auth/: constants.py  crud.py  dependencies.py  redis.py  schemas.py  security.py  utils.py  views.py
api_v1/comment/: crud.py  dependencies.py  schemas.py  views.py
api_v1/common/: crud.py  dependencies.py
core/: config.py  db_helper.py
core/models/: __init__.py  announcement.py  base.py  comment.py  user.py
